modules/gdscript/tests/scripts/analyzer/errors/access_level_private_func_subclass_using_self.gd
@private

class Foo:
    func foo():
        pass

class Bar extends Foo:
    func bar():
        self.foo()

func test():
    pass
